force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__BodyBackgroundAttribute__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__BodyBackgroundAttribute__c</fullName>
    <label>Body Background Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No-repeat</fullName>
                <default>true</default>
                <label>No-repeat</label>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>Repeat-x</fullName>
            </value>
            <value>
                <fullName>Repeat-y</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>