force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__BodyBackgroundId__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__BodyBackgroundId__c</fullName>
    <label>Body Background Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>