force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Color01__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Color01__c</fullName>
    <label>Color01</label>
    <length>10</length>
    <type>Text</type>
</CustomField>