force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Color03__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Color03__c</fullName>
    <label>Color03</label>
    <length>10</length>
    <type>Text</type>
</CustomField>