force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__ColorFont07__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ColorFont07__c</fullName>
    <label>ColorFont07</label>
    <length>10</length>
    <type>Text</type>
</CustomField>