force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__CSS__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CSS__c</fullName>
    <label>CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>