force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Default__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>