force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Font__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Font__c</fullName>
    <label>Font</label>
    <length>50</length>
    <type>Text</type>
</CustomField>