force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Header__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Header__c</fullName>
    <label>Header</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fixed</fullName>
            </value>
            <value>
                <fullName>fullsize</fullName>
            </value>
            <value>
                <fullName>pagesize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>