force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Home__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Home__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Program Layouts (Home)</relationshipLabel>
    <relationshipName>ProgramLayoutsOR</relationshipName>
    <type>Lookup</type>
</CustomField>