force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__HTMLHeadLayout__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__HTMLHeadLayout__c</fullName>
    <label>HTML head layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>