force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Menu__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Menu__c</fullName>
    <label>Menu</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pills</fullName>
            </value>
            <value>
                <fullName>tabs</fullName>
            </value>
            <value>
                <fullName>nav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>