force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__SearchRewardMenu__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SearchRewardMenu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Reward Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Program Layouts</relationshipLabel>
    <relationshipName>ProgramLayouts</relationshipName>
    <type>Lookup</type>
</CustomField>