force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Segment__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment</label>
    <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
    <relationshipName>ProgramPortals</relationshipName>
    <type>Lookup</type>
</CustomField>