force-app/main/default/objects/FieloEE__ProgramLayout__c/fields/FieloEE__Title__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>